--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description"     : "Show a placeholder while images are being preloaded.",
     "main"            : "lib/index.js",
     "scripts"         : {
-        "build"     : "./scripts/build.sh",
+        "build-linx": "./scripts/build.sh",
+	    "build-mac": "./scripts/build.sh",
+	    "build-windows": "./scripts/build.bat",
+        "build": "node ./scripts/build.js",
         "test"      : "./node_modules/.bin/eslint -c .eslintrc modules/*",
         "prepublish": "npm run build"
     },
