--- a/package.json
+++ b/package.json
@@ -1,58 +1,58 @@
 {
-    "name"            : "@ensemble/react-preloaded",
-    "version"         : "1.0.0",
-    "description"     : "Show a placeholder while images are being preloaded.",
-    "main"            : "lib/index.js",
-    "scripts"         : {
+    "name": "@eg/react-preloaded",
+    "version": "1.0.1",
+    "description": "Show a placeholder while images are being preloaded.",
+    "main": "lib/index.js",
+    "scripts": {
         "build-linx": "./scripts/build.sh",
-	    "build-mac": "./scripts/build.sh",
-	    "build-windows": ".\\scripts\\build.bat",
+        "build-mac": "./scripts/build.sh",
+        "build-windows": ".\\scripts\\build.bat",
         "build": "node ./scripts/build.js",
-        "test"      : "./node_modules/.bin/eslint -c .eslintrc modules/*",
+        "test": "./node_modules/.bin/eslint -c .eslintrc modules/*",
         "prepublish": "npm run build"
     },
-    "repository"      : {
+    "repository": {
         "type": "git",
-        "url" : "git@github.com:spoonx/react-preloaded.git"
+        "url": "git@github.com:spoonx/react-preloaded.git"
     },
-    "keywords"        : [
+    "keywords": [
         "react",
         "preload",
         "preloader",
         "loader",
         "react-component"
     ],
-    "contributors"    : [
+    "contributors": [
         "Sam Bernard <sambernard@gmail.com>"
     ],
-    "author"          : "Wesley Overdijk <r.w.overdijk@gmail.com>",
-    "license"         : "MIT",
-    "bugs"            : {
+    "author": "Wesley Overdijk <r.w.overdijk@gmail.com>",
+    "license": "MIT",
+    "bugs": {
         "url": "https://github.com/spoonx/react-preloaded/issues"
     },
-    "homepage"        : "https://github.com/spoonx/react-preloaded",
+    "homepage": "https://github.com/spoonx/react-preloaded",
     "peerDependencies": {
-        "react"    : ">=15.0.0",
-        "react-dom": ">=15.0.0"
+        "react": ">=17.0.0",
+        "react-dom": ">=17.0.0"
     },
-    "dependencies"    : {
-        "prop-types": "^15.5.10"
+    "dependencies": {
+        "prop-types": "^15.8.1"
     },
-    "devDependencies" : {
-        "babel-cli"             : "^6.11.4",
-        "babel-eslint"          : "^7.2.3",
-        "babel-loader"          : "^6.2.5",
-        "babel-preset-es2015"   : "^6.13.2",
-        "babel-preset-react"    : "6.11.1",
-        "babel-preset-stage-2"  : "^6.13.0",
-        "webpack"               : "^1.13.1",
-        "webpack-dev-server"    : "^1.14.1",
-        "eslint"                : "^3.19.0",
-        "eslint-config-airbnb"  : "^14.1.0",
-        "eslint-plugin-import"  : "^2.2.0",
+    "devDependencies": {
+        "babel-cli": "^6.11.4",
+        "babel-eslint": "^7.2.3",
+        "babel-loader": "^6.2.5",
+        "babel-preset-es2015": "^6.13.2",
+        "babel-preset-react": "6.11.1",
+        "babel-preset-stage-2": "^6.13.0",
+        "eslint": "^3.19.0",
+        "eslint-config-airbnb": "^14.1.0",
+        "eslint-plugin-import": "^2.2.0",
         "eslint-plugin-jsx-a11y": "^4.0.0",
-        "eslint-plugin-react"   : "^6.10.3",
-        "react"                 : "^15.5.4",
-        "react-dom"             : "^15.5.4"
+        "eslint-plugin-react": "^6.10.3",
+        "react": "^15.5.4",
+        "react-dom": "^15.5.4",
+        "webpack": "^1.13.1",
+        "webpack-dev-server": "^1.14.1"
     }
 }
